# sjtu-robomaster-homework3

armors/: CMakeLists.txt  main.cpp  result.txt
stocks/: CMakeLists.txt  main.cpp  result.txt
